# visao-telegram-bot

./: .gitignore  GFG  README.md  criar_tabelas.py  escopo.txt  main.py  migrar_espelho.py  migrar_ponto.py  migrar_ponto_para_espelho.py  pyproject.toml  test.py  test2.py
configs/: const.py  logger.py  menu.py
handlers/: cancelar_handler.py  cancelar_marcacao_ponto_handler.py  comando_nao_encontrado_handler.py  compartilhando_localizacao_handler.py  escolhendo_opcao_marcacao_ponto_handler.py  falha_ao_marcar_ponto.py  finalizar_marcacao_ponto_handler.py  informar_dados_ponto_handler.py  iniciar_marcacao_ponto_handler.py  notificar_grupo_handler.py  notificar_handler.py  salvar_dado_informado_handler.py
helpers/: burcar_horario_ultimo_ponto_funcionario.py  buscar_funcionario.py  buscar_notificacoes_nao_enviadas.py  buscar_turno_funcionario.py  capturar_texto_foto.py  criar_teclado.py  dict_to_str.py  diferenca_entre_horarios_em_minutos.py  registrar_grupo.py  registrar_ponto.py  registrar_ponto_espelho.py
helpers/tabelas/: 01_criar_tabela_grupos.py  02_criar_tabela_notificacoes.py  03_criar_tabela_ponto.py  04_adicionar_coluna_texto_foto.py
helpers/windows_service/: configurar.py  const.py  criar.py  iniciar.py  parar.py  reiniciar.py  remover.py
scripts/: formatar_codigo.bat
scripts/windows_service/: configurar.bat  criar.bat  iniciar.bat  parar.bat  reiniciar.bat  remover.bat
